# rustino

./: .gitignore  COMMANDS.md  Cargo.toml  README.md  SETUP_GIT.md  patch-arrow-arith.zsh
src/: connector.rs  coordinator.rs  createdata.py  engine.rs  iceberg.rs  iceberg_setup.py  main.rs  planner.rs  sql.rs  worker.rs
src/data/: sales.parquet
