[package]
name = "rustino_sql_bnf"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
datafusion = { version = "39", default-features = false, features = ["parquet"] }
apache-avro = "0.16"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
